# notikit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-03-06-notikit-design.md  2026-03-06-notikit-implementation.md
src/notikit/: __init__.py  cli.py  config.py  core.py  exceptions.py
src/notikit/providers/: __init__.py  bark.py  base.py  dingtalk.py  lark.py  telegram.py
tests/: test_cli.py  test_config.py  test_core.py  test_exceptions.py  test_init.py
tests/test_providers/: test_bark.py  test_dingtalk.py  test_lark.py  test_telegram.py
