[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notikit"
version = "0.1.0"
description = "轻量级 Python 通知工具包，统一接口发送多渠道消息"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["src/notikit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
