[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notikit"
version = "0.2.0"
description = "轻量级 Python 通知工具包，统一接口发送多渠道消息"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Leon", email = "leon2035@gmail.com" }]
keywords = ["notification", "bark", "telegram", "dingtalk", "lark", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/leon2035/notikit"
Repository = "https://github.com/leon2035/notikit"
Issues = "https://github.com/leon2035/notikit/issues"

[project.scripts]
notikit = "notikit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[tool.hatch.build.targets.wheel]
packages = ["src/notikit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
